2A/05_Projet_GL/src/test/deca/context/valid/complet/05_init_field_super_class.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024


class A {
    int x ;
}


class B extends A {
     
    void initX() {
        x = 0 ;
    }
}