2A/05_Projet_GL/src/test/deca/context/invalid/complet/78_select_protected_null.deca
// Description :
//  selection   avce null  
// Resultats :
//    ligne 17 :   Le type attendu doit être un type de classe
// Historique : 
//  cree le 16/01/2024

class A {
    protected int x ; 
}

class B extends A {
    A a ;
    // protected int b = a.x ;  

    void initX() {
        null.x = 0 ;
    }
}

